# gtk-rs-test

./: Cargo.toml  build.rs  settings
resources/: collection_row.ui  collection_wizard.ui  icons.gresource  icons.gresource.xml  main_window.ui  resources.gresources.xml  settings  task_row.ui
src/: collection_object.rs  lib.rs  list_store_ser.rs  main.rs  main_window.rs  task_object.rs  watcher.rs
src/main_window/: collection_row.rs  collection_wizard.rs  main_window_imp.rs  task_row.rs
src/main_window/collection_row/: collection_row_imp.rs
src/main_window/collection_wizard/: collection_wizard_imp.rs
src/main_window/task_row/: task_row_imp.rs
