[package]
name = "gtk-rs-test"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_7"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.20.0"
